syntax="proto3";

option  go_package = "amusing-x.com/userservice/userservice";

package userservice;

message JoinRequest {
  string Nickname = 1;
  string Password = 2;
  string AreaCode = 3;
  string Phone = 4;
  string VerificationCode = 5;
}

message JoinResponse {
  string Nickname = 1;
  string AreaCode = 2;
  string Phone = 3;
}