syntax="proto3";

option  go_package = "amusing-x.com/userservice/userservice";

package userservice;

message ResetPasswordRequest {
  string Password = 1;
  string AreaCode = 2;
  string Phone = 3;
  string VerificationCode = 4;
}

message ResetPasswordResponse {
  string Result  = 1;
}