syntax="proto3";

option go_package="amusing-x.com/ganymede/ganymedeservice";

package ganymde;

import "ganymede/proto/regexp.proto";
import "ganymede/proto/login.proto";
import "ganymede/proto/join.proto";
import "ganymede/proto/country_code.proto";
import "ganymede/proto/verification_code.proto";
import "ganymede/proto/verification_code_check.proto";
import "ganymede/proto/reset_password.proto";
import "ganymede/proto/oauth_login.proto";
import "ganymede/proto/oauth_info.proto";
import "ganymede/proto/is_login.proto";
import "ganymede/proto/logout.proto";
import "ganymede/proto/authentication.proto";

service GanymedeService {
  rpc Pong(BlankParams) returns (PongResponse) {}
  rpc Regexps(BlankParams) returns (RegexpResponse) {}
  rpc Login(LoginRequest) returns(LoginResponse) {}
  rpc Join(JoinRequest) returns (JoinResponse) {}
  rpc CountryCodes(BlankParams) returns (CountryCodeList) {}
  rpc GetVerificationCode(VerificationCodeRequest) returns (VerificationCodeResponse) {}
  rpc VerificationCodeCheck(VerificationCodeCheckRequest) returns (VerificationCodeCheckResponse) {}
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse) {}
  rpc OAuthLogin(OAuthLoginRequest) returns (OAuthLoginResponse) {}
  rpc OAuthInfo(OAuthInfoRequest) returns (OAuthInfoResponse) {}
  rpc IsLogin(IsLoginRequest) returns (IsLoginResponse) {}
  rpc LogOut(LogoutRequest) returns (LogoutResponse) {}
  rpc Authentication(AuthenticationRequest) returns (AuthenticationResponse) {}
}


message BlankParams {}
