syntax="proto3";

option  go_package = "amusing-x.com/ganymede/ganymedeservice";

package ganymde;

message VerificationCodeRequest {
	string phone = 1;
	string action = 2;
	string area_code = 3;
}

message VerificationCodeResponse {
	string code = 1;
}

